Changing docker to use external mysql container.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,41 +5,27 @@
 FROM ubuntu:12.04
 MAINTAINER Papazafeiropoulos Giorgos <g.papazafeiropoulos@gmail.com>
 
-# Exposed ENV
-#Modify them to depict your instalation environment
-#NGINX server name
 ENV NGINX_HOSTNAME rens
-#MYSQL user and password for the application
+#MYSQL pulled from separate container
 ENV MYSQL_USER maptool
-ENV MYSQL_PASS maptool123
+ENV MYSQL_PASS changeme
 #DJANGO unique key - create a new one!
 ENV DJANGO_KEY @o3zk1@4^d3osu-om9-_=(hvr48o*%c+@h3d$%pg2g+ta2g2v(
-
 
 # DO NOT MODIFY THESE!
 # avoid debconf and initrd
 ENV DEBIAN_FRONTEND noninteractive
 ENV INITRD No
 
-
 #Update packages and install needed.
 RUN apt-get -y update
-RUN apt-get install -y git-core build-essential python-dev python-pip nginx bzip2 memcached libmysqlclient-dev mysql-server libxml2-dev libxslt-dev rabbitmq-server supervisor curl sudo libyaml-dev vim
-RUN	sed	-i -e "s/^bind-address\s*=\s*127.0.0.1/bind-address	=	0.0.0.0/"	/etc/mysql/my.cnf
+RUN apt-get install -y git-core build-essential python-dev python-pip nginx bzip2 memcached libmysqlclient-dev libxml2-dev libxslt-dev rabbitmq-server supervisor curl sudo libyaml-dev vim
 
 #Set up nginx as daemon off.
 RUN sed -i -e '1idaemon off;' /etc/nginx/nginx.conf
 
 RUN easy_install -U distribute 
 RUN pip install virtualenv
-
-#Set up the mysql db.
-ADD mysql_setup.sh /mysql_setup.sh
-RUN chmod +x /mysql_setup.sh
-RUN /mysql_setup.sh
-
-# set root password
-RUN echo "root:root" | chpasswd
 
 # copy supervisor conf
 ADD supervisor/conf.d /etc/supervisor/conf.d
@@ -57,23 +43,11 @@ RUN mkdir /home/${MYSQL_USER}/static
 #Get eve-wspace code
 RUN git clone https://github.com/marbindrakon/eve-wspace.git
 
-
-#Install the eve dumb data
+# Concat latest eve mysql dump into single file
 RUN curl -O https://www.fuzzwork.co.uk/dump/mysql-latest.tar.bz2
-RUN mkdir evedumb && tar xvf mysql-latest.tar.bz2 -C evedumb
-
-RUN sudo /usr/sbin/mysqld &\
-	sleep 10s &&\
-	sudo find ./evedumb -type f -name "*.sql" -exec sh -c "mysql -u ${MYSQL_USER} -p${MYSQL_PASS} evewspace < {}" \;
-
-RUN rm -rf evedumb
-RUN rm -rf mysql-latest.tar.bz2
-
-#Install Eve-Wspace Environment
-#Add evewspace configuration tool and make it accessible
-RUN sudo /usr/sbin/mysqld &\
-	sleep 10s &&\ 
-	/evewspace.sh
+RUN mkdir evedump && tar xvf mysql-latest.tar.bz2 -C evedump
+RUN touch evedump.sql && find ./evedump -type f -name "*.sql" -exec sh -c "cat {} > evedump.sql" \;
+RUN rm -rf evedump && rm -rf mysql-latest.tar.bz2
 
 #Get back to root
 USER root
@@ -94,4 +68,8 @@ RUN rm -rf /var/cache/apt/archives/* /var/lib/apt/lists/*
 
 # start supervisor
 EXPOSE 80
-CMD ["/usr/bin/supervisord"]
+ADD entrypoint.sh /entrypoint.sh
+ADD evewspace.sh /evewspace.sh
+RUN chmod +x /entrypoint.sh
+RUN chmod +x /evewspace.sh
+ENTRYPOINT ["/entrypoint.sh"]
